--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>ThinkR redirection...</title>
   <meta charset="UTF-8" />
   <script>
-    window.location.replace("https://meet.thinkr.academy/");
+    window.location.replace("https://rtask.thinkr.fr/");
   </script>
 </head>
 
